# photos

./: .bumpversion.cfg  .envrc  .gitignore  .pre-commit-config.yaml  README.md  Untitled.ipynb  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  start.sh
.github/workflows/: push.yml
src/google_photos/: main.py
src/photos/: __init__.py  camera_uploads.py  constants.py  main.py  transforms.py  types.py  utilities.py
src/tests/: conftest.py  test_camera_uploads.py  test_constants.py  test_main.py  test_strategies.py  test_utilities.py
