[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 80
skip-magic-trailing-comma = true
target-version = ["py310"]

[tool.isort]
atomic = true
float_to_top = true
force_single_line = true
line_length = 80
lines_after_imports = 2
profile = "black"
remove_redundant_aliases = true
skip_gitignore = true
src_paths = ["src"]
virtual_env = ".venv/bin/python"

[tool.poetry]
name = "google-photos"
version = "0.0.1"
description = "Organize the Google Photos export"
authors = ["Derek Wan <d.wan@icloud.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
exif = "^1.3.4"
loguru = "^0.6.0"
more-itertools = "^8.12.0"
qtconsole = "^5.3.0"

[tool.poetry.dev-dependencies]
black = "^22.3"
# click = "~8.0.4" # https://github.com/dask/distributed/issues/6013
flake8 = "^4.0"
hypothesis = "^6.17.0"
isort = "^5.10"
jupyterlab = "^3.1.9"
jupyterlab-vim = "^0.14.2"
pre-commit = "^2.16"
pyclean = "^2.0"
pytest = "^7.1"
# flake8 extensions
flake8-absolute-import = "^1.0"
flake8-annotations = "^2.8"
flake8-bandit = "^3.0"
flake8-bugbear = "^22.3"
flake8-builtins = "^1.5"
flake8-comprehensions = "^3.8"
flake8-debugger = "^4.0"
flake8-eradicate = "^1.2"
flake8-executable = "^2.1"
flake8-no-pep420 = "^2.1"
flake8-pie = "^0.15"
flake8-print = "^4.0"
flake8-pytest-style = "^1.6"
flake8-simplify = "^0.19"
flake8-unused-arguments = "^0.0"
flake8-variables-names = "^0.0"
pep8-naming = "^0.12"
# pytest extensions
pytest-instafail = "^0.4"
pytest-randomly = "^3.8"
pytest-xdist = "^2.3"

[tool.poetry.scripts]

[tool.pytest.ini_options]
addopts = ["-q", "-rsxX", "--color=yes", "--strict-markers"]
minversion = 6.0
looponfailroots = ["src"]
testpaths = ["src/tests"]
xfail_strict = true
log_level = "WARNING"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
log_cli_format = """\
  [%(asctime)s.%(msecs)03d] [%(levelno)d] [%(name)s:%(funcName)s] \
  [%(process)d]\n%(msg)s"""
log_cli_level = "WARNING"
